# AnalysisForNanoporousCarbonMaterials

./: README.md  pyproject.toml
examples/: README.md  example_DiffusionAnalysis.ipynb  example_PoreAnalysis.ipynb  manual.ipynb
src/AnalysisForNanoporousCarbonMaterials/: DiffusionAnalysis.py  MembraneAnalysis.py  PoreAnalysis.py  core_functions.py
tests/: test_DiffusionAnalysis.py
usage/: interactive_DiffusionAnalysis.py  interactive_PoreAnalysis.py  plot_effective_pore_diameter.ipynb
